syntax = "proto3";
option java_multiple_files = true;
package com.ampnet.mailservice.proto;

// User = User UUID

message MailConfirmationRequest {
    string email = 1;
    string token = 2;
}

message OrganizationInvitationRequest {
    string email = 1;
    string organization = 2;
}

message DepositInfoRequest {
    string user = 1;
    bool minted = 2;
}

message WithdrawRequest {
    string user = 1;
    uint64 amount = 2;
}

message WithdrawInfoRequest {
    string user = 1;
    bool burned = 2;
}

message ResetPasswordRequest {
    string email = 1;
    string token = 2;
}

message WalletTypeRequest {
    WalletType type = 1;
    string coop = 2;
    string activation_data = 3;
}

message ActivatedWalletRequest {
    WalletType type = 1;
    string wallet_owner = 2;
}

message Empty {
}

enum WalletType {
    USER = 0;
    PROJECT = 1;
    ORGANIZATION = 2;
}

service MailService {
    rpc SendMailConfirmation(MailConfirmationRequest) returns (Empty);
    rpc SendOrganizationInvitation(OrganizationInvitationRequest) returns (Empty);
    rpc SendWithdrawInfo(WithdrawInfoRequest) returns (Empty);
    rpc SendWithdrawRequest(WithdrawRequest) returns (Empty);
    rpc SendDepositInfo(DepositInfoRequest) returns (Empty);
    rpc SendResetPassword(ResetPasswordRequest) returns (Empty);
    rpc SendNewWalletMail(WalletTypeRequest) returns (Empty);
    rpc SendWalletActivated(ActivatedWalletRequest) returns (Empty);
}
